Finished up the JavaScript code, and created the README

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./develop/style.css" />
   </head>
 
   <body>
     <div class="wrapper">
       <!-- Header Section -->
+
       <header>
         <h1>Password Generator</h1>
       </header>
@@ -22,14 +23,14 @@
         </div>
 
         <!-- Card body -->
-        <div class="card-body">
+        <section class="card-body">
           <textarea
             readonly
             id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
           ></textarea>
-        </div>
+        </section>
 
         <!-- Card Footer -->
         <div class="card-footer">
@@ -39,6 +40,6 @@
     </div>
 
     <!-- JavaScript Link -->
-    <script src="script.js"></script>
+    <script src="./develop/script.js"></script>
   </body>
 </html>
